--- a/html/support.html
+++ b/html/support.html
@@ -14,7 +14,7 @@
         <a href="#3">another</a>
     </div>
     <div class="kosong"> </div>
-    <h1 class="hline">wkwkw</h1>
+    <h1 class="hline">Project</h1>
 
     <div class="kosong"></div>
     <div class="flex">
@@ -24,12 +24,12 @@
             
                 <div class="center-text">
                     <h2 >card</h2>
-                    <p >u can place link or something </p>
+                    <p >just box</p>
                 
             </div>
                 <div class="center-text">
                     <h2 >card</h2>
-                    <p>umm mybe a img</p>
+                    <p>just box</p>
                 </div>
                 <div class="center-text" >
                     <h2 >card</h2>
